--- a/src/app/componente-add/componente-add.component.css
+++ b/src/app/componente-add/componente-add.component.css
@@ -1,3 +1,7 @@
+h3{
+    color: red;
+}
+
 .addPersona{
     background-color: rgb(155, 85, 15);
     border-radius: 20px;
@@ -8,4 +12,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+button{
+    margin: 10px;
+}
+button:hover{
+    background-color: rgb(56, 56, 136);
 }
