--- a/src/styles.css
+++ b/src/styles.css
@@ -9,14 +9,7 @@
     text-align: center;
 }
 
-.addPersona{
-    background-color: rgb(155, 85, 15);
-    padding: 20px;
-    text-align: center;;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
+
 
 .selectPersona{
     background-color: rgb(155, 85, 15);
@@ -24,7 +17,6 @@
     margin: 10px;
     display: flex;
     flex-direction: column;
-
     text-align: center;
 }
 
@@ -43,17 +35,4 @@ input{
     margin-bottom: 10px;
 }
 
-button{
-
-    margin: 10px;
-}
-button:hover{
-    background-color: blue;
-}
-
-footer{
-    background-color: rgb(255, 217, 0);
-    height: 10vh;
-    width: 100%;
-    text-align: center;
-}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
